--- a/Classes/CompanyViewController.xib
+++ b/Classes/CompanyViewController.xib
@@ -47,7 +47,7 @@
 					<object class="IBUITableView" id="294114201">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 90}, {320, 282}}</string>
+						<string key="NSFrame">{{0, 80}, {320, 292}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -64,7 +64,7 @@
 					<object class="IBUILabel" id="592381345">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrameSize">{230, 90}</string>
+						<string key="NSFrameSize">{230, 80}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -93,6 +93,20 @@
 						<int key="IBUITextAlignment">1</int>
 						<int key="IBUILineBreakMode">0</int>
 					</object>
+					<object class="IBUIImageView" id="315472020">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrameSize">{20, 20}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">HRC_Icon.png</string>
+						</object>
+					</object>
 					<object class="IBUIView" id="931002531">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
@@ -101,7 +115,7 @@
 							<object class="IBUILabel" id="727651201">
 								<reference key="NSNextResponder" ref="931002531"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrameSize">{90, 90}</string>
+								<string key="NSFrameSize">{80, 80}</string>
 								<reference key="NSSuperview" ref="931002531"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="567185113">
 									<int key="NSColorSpace">3</int>
@@ -119,22 +133,8 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUITextAlignment">1</int>
 							</object>
-							<object class="IBUIImageView" id="315472020">
-								<reference key="NSNextResponder" ref="931002531"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{70, 0}, {20, 20}}</string>
-								<reference key="NSSuperview" ref="931002531"/>
-								<bool key="IBUIOpaque">NO</bool>
-								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
-								<int key="IBUIContentMode">4</int>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">HRC_Icon.png</string>
-								</object>
-							</object>
 						</object>
-						<string key="NSFrame">{{230, 0}, {90, 90}}</string>
+						<string key="NSFrame">{{240, 0}, {80, 80}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -145,7 +145,7 @@
 					<object class="IBUIToolbar" id="707150189">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">290</int>
-						<string key="NSFrame">{{0, 90}, {320, 44}}</string>
+						<string key="NSFrame">{{0, 80}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -161,7 +161,7 @@
 							<object class="IBUIScrollView" id="543991769">
 								<reference key="NSNextResponder" ref="1066788612"/>
 								<int key="NSvFlags">268</int>
-								<string key="NSFrameSize">{320, 246}</string>
+								<string key="NSFrameSize">{320, 256}</string>
 								<reference key="NSSuperview" ref="1066788612"/>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -173,11 +173,11 @@
 							<object class="IBUIView" id="488014158">
 								<reference key="NSNextResponder" ref="1066788612"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{0, 245}, {320, 40}}</string>
+								<string key="NSFrame">{{0, 255}, {320, 40}}</string>
 								<reference key="NSSuperview" ref="1066788612"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MC4xMzI2NTMwNjEyIDAuMTMyNjUzMDYxMiAwLjEzMjY1MzA2MTIAA</bytes>
+									<int key="NSColorSpace">2</int>
+									<bytes key="NSRGB">MC40OTQxMTc2NzcyIDAuNTU2ODYyNzcxNSAwLjYzOTIxNTcwNzgAA</bytes>
 								</object>
 								<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 							</object>
@@ -185,8 +185,9 @@
 								<reference key="NSNextResponder" ref="1066788612"/>
 								<int key="NSvFlags">1316</int>
 								<object class="NSPSMatrix" key="NSFrameMatrix"/>
-								<string key="NSFrame">{{0, 246}, {320, 36}}</string>
+								<string key="NSFrame">{{0, 256}, {320, 36}}</string>
 								<reference key="NSSuperview" ref="1066788612"/>
+								<reference key="IBUIBackgroundColor" ref="567185113"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -195,7 +196,7 @@
 								<int key="IBUINumberOfPages">3</int>
 							</object>
 						</object>
-						<string key="NSFrame">{{0, 90}, {320, 282}}</string>
+						<string key="NSFrame">{{0, 80}, {320, 292}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="IBUIBackgroundColor" ref="567185113"/>
 						<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -327,6 +328,7 @@
 							<reference ref="931002531"/>
 							<reference ref="294114201"/>
 							<reference ref="707150189"/>
+							<reference ref="315472020"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -382,7 +384,6 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="727651201"/>
-							<reference ref="315472020"/>
 						</object>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">scoreColor</string>
@@ -398,11 +399,6 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">27</int>
-						<reference key="object" ref="315472020"/>
-						<reference key="parent" ref="931002531"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">29</int>
 						<reference key="object" ref="707150189"/>
 						<object class="NSMutableArray" key="children">
@@ -415,6 +411,11 @@
 						<reference key="object" ref="488014158"/>
 						<reference key="parent" ref="1066788612"/>
 						<string key="objectName">pageControlBackground</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">27</int>
+						<reference key="object" ref="315472020"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 				</object>
 			</object>
@@ -647,6 +648,20 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBFrameworkSource</string>
 						<string key="minorKey">Foundation.framework/Headers/NSXMLParser.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CAAnimation.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBFrameworkSource</string>
+						<string key="minorKey">QuartzCore.framework/Headers/CALayer.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
